--- a/movies/templates/index.html
+++ b/movies/templates/index.html
@@ -1,14 +1,12 @@
 {% extends "base.html" %}
 {% block title %}{{ pokemon | capfirst }}{% endblock title %}
 {% block content %}
-    <p>Has elegido la pelicula: <strong>{{ movies | capfirst }}</strong></p>
-    <h3>Información de la pelicula</h3>
+    <div class="header">Listado de Películas</div>
     <ul>
-        <p><strong>Título:</strong> {{ movies.title }}</p>
-        <p><strong>Género:</strong> {{ movies.genre }}</p>
-        <p><strong>Director:</strong> {{ movies.director }}</p>
-        <p><strong>Año de Publicación:</strong> {{ movies.release_year }}</p>
-        <p><strong>Sinopsis:</strong> {{ movies.synopsis }}</p>
+        {% for movie in movies %}
+            <li class="movie">
+                <a href="{{ movie.id }}/">{{ movie.title }} - {{ movie.release_year }}</a>
+            </li>
+        {% endfor %}
     </ul>
-    <a href="/">Volver al Listado</a>
 {% endblock content %}
